main ki css main change

--- a/css/project.css
+++ b/css/project.css
@@ -9,7 +9,12 @@ main {
     width: 700px;
     height: 400px;
     
-    margin: 20px auto;
+    margin: 20px  auto;
     box-shadow: 0px 0px 2px gray;
+    transition: .5s;
+}
+
+main:hover {
+    background-color: aquamarine;
 }
 
